[package]
name = "vyges-glitch"
version = "0.1.12"
edition = "2021"
description = "Static glitch/hazard analysis: a gate-level netlist + Liberty in, reconvergent-fanout hazards out."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/glitch"

# No third-party deps (builds/tests offline). The netlist / Liberty parsers and the
# delay-table lookup come from the shared vyges-loom foundation.
[dependencies]
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main" }

[[bin]]
name = "vyges-glitch"
path = "src/main.rs"

[lib]
name = "vyges_glitch"
path = "src/lib.rs"
